--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="/scripts/app.js" defer></script>
+    <script src="./scripts/app.js" defer></script>
 
-    <link rel="stylesheet" href="/assets/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./assets/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="./style.css">
 
     <title>Superheroes</title>
 </head>
@@ -17,10 +17,10 @@
 
     <!-- Navigation Buttons -->
     <div class="btn-tray">
-        <a href="index.html" class="speech-bubble home-btn">
+        <a href="./index.html" class="speech-bubble home-btn">
             <i class="fas fa-home"></i>
         </a>
-        <a href="/screens/favorites.html" class="speech-bubble fav-btn">
+        <a href="./screens/favorites.html" class="speech-bubble fav-btn">
             <i class="fas fa-heart"></i>
         </a>
     </div>
@@ -58,7 +58,7 @@
         <div class="card">
             <div class="hero-text hero-name">
             </div>
-            <a href="/screens/hero.html"><img class="hero-img" src="" alt="SuperHero Image"></a>
+            <a href="./screens/hero.html"><img class="hero-img" src="" alt="SuperHero Image"></a>
             <div class="hero-text hero-fav">
                 <i id="hero-icon" class="fas fa-plus"></i> Favorite
             </div>
