--- a/screens/hero.html
+++ b/screens/hero.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="/scripts/app.js" defer></script>
-    <script src="/scripts/hero.js" defer></script>
+    <script src="../scripts/app.js" defer></script>
+    <script src="../scripts/hero.js" defer></script>
 
-    <link rel="stylesheet" href="/assets/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../assets/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="../style.css">
 
     <title>Hero</title>
 </head>
@@ -18,10 +18,10 @@
 
     <!-- Navigation Buttons -->
     <div class="btn-tray">
-        <a href="/index.html" class="speech-bubble home-btn">
+        <a href="../index.html" class="speech-bubble home-btn">
             <i class="fas fa-home"></i>
         </a>
-        <a href="/screens/favorites.html" class="speech-bubble fav-btn">
+        <a href="../screens/favorites.html" class="speech-bubble fav-btn">
             <i class="fas fa-heart"></i>
         </a>
     </div>
