--- a/screens/favorites.html
+++ b/screens/favorites.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <script src="/scripts/app.js" defer></script>
-    <script src="/scripts/favorites.js" defer></script>
+    <script src="../scripts/app.js" defer></script>
+    <script src="../scripts/favorites.js" defer></script>
 
-    <link rel="stylesheet" href="/assets/fontawesome/css/all.min.css" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="../assets/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="../style.css" />
 
     <title>Favorites</title>
 </head>
