Fixed Path to screens

--- a/screens/favorites.html
+++ b/screens/favorites.html
@@ -17,10 +17,10 @@
 <body>
     <!-- Navigation Buttons -->
     <div class="btn-tray">
-        <a href="/index.html" class="speech-bubble home-btn">
+        <a href="../index.html" class="speech-bubble home-btn">
             <i class="fas fa-home"></i>
         </a>
-        <a href="/screens/favorites.html" class="speech-bubble fav-btn">
+        <a href="./favorites.html" class="speech-bubble fav-btn">
             <i class="fas fa-heart"></i>
         </a>
     </div>
@@ -54,7 +54,7 @@
     <template id="card-template">
         <div class="card">
             <div class="hero-text hero-name"></div>
-            <a href="/screens/hero.html"><img class="hero-img" src="" alt="SuperHero Image" /></a>
+            <a href="./hero.html"><img class="hero-img" src="" alt="SuperHero Image" /></a>
             <div class="hero-text hero-fav">
                 <i id="hero-icon" class="fas fa-plus"></i> Favorite
             </div>
