CORS Settings Updated

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
         <!-- SearchBox -->
         <div class="search-text">
-            <input type="text" name="search" id="search" placeholder="Search ... " autocomplete="off" spellcheck="false">
+            <input type="text" name="search" id="search" placeholder="Search ... " autocomplete="off"
+                spellcheck="false">
         </div>
 
         <!-- Primary Container -->
@@ -55,7 +56,7 @@
 
     <!-- Template for Hero Cards -->
     <template id="card-template">
-        <div class="card">
+        <div oncontextmenu="return false;" class="card">
             <div class="hero-text hero-name">
             </div>
             <a href="./screens/hero.html"><img class="hero-img" src="" alt="SuperHero Image"></a>
